[package]
authors = ["pnlybubbles <pnlybubbles@gmail.com>"]
name = "theory-sandbox-render"
version = "0.1.0"

[dependencies]
time = "0.1.40"
rand = "0.7.3"
rayon = "1.3.0"
mt19937 = "1.0.1"
rand_xorshift = "0.2.0"
rand_xoshiro = "0.4.0"
rand_mt = "3.0.0"
rand_core = "0.5.1"
fasthash = "0.4.0"

[profile.dev]
opt-level = 3
debug = false
overflow-checks = false
